--- a/index.html
+++ b/index.html
@@ -7,68 +7,29 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body>
         <!-- Navbar Section -->
         <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand text-white fw-bold" href="#">EPIzon</a>
+            <div class="container-fluid px-3">
+                <a class="navbar-brand text-white fw-bold fs-2" href="index.html">
+                    <i class="fa-solid fa-shop"></i>
+                    <span>EPIzon</span>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <form class="d-flex ms-auto" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-light" type="submit">Search</button>
-                    </form>
+                    <a class="btn btn-outline-light ms-auto" href="/backoffice/backoffice.html">Vai alla pagina di backoffice!</a>
                 </div>
             </div>
         </nav>
         <!-- Main Section -->
         <main>
-            <!-- Form to add a product in the box -->
-            <div class="form-container d-flex justify-content-center mt-5">
-                <form>
-                    <div class="row">
-                        <div class="col-12 d-flex justify-content-center mb-2">
-                            <span class="fs-3">SCHEDA PER AGGIUNGERE UN NUOVO PRODOTTO</span>
-                        </div>
-                        <div class="col-6">
-                            <label for="inputName">Name</label>
-                            <input type="text" class="form-control" id="inputName">
-                        </div>
-                        <div class="col-6 mb-3">
-                            <label for="inputBrand">Brand</label>
-                            <input type="text" class="form-control" id="inputBrand">
-                        </div>
-                        <div class="col-9">
-                            <label for="inputURL" class="form-label">Inserisci l'URL dell'immagine del prodotto</label>
-                            <div class="input-group">
-                                <span class="input-group-text" id="basic-addon3">https://example.com/users/</span>
-                                <input type="text" class="form-control" id="inputURL" aria-describedby="basic-addon3">
-                            </div>
-                        </div>
-                        <div class="col-3 mb-3">
-                            <label for="inputPrice" class="form-label">Prezzo</label>
-                            <div class="input-group flex-nowrap" >
-                                <input type="text" class="form-control" id="inputPrice" aria-label="Price" aria-describedby="addon-wrapping">
-                                <span class="input-group-text" id="addon-wrapping">€</span>
-                            </div>
-                        </div>
-                        <div class="col-12 mb-3">
-                            <label for="inputDescription">Descrizione del prodotto</label>
-                            <textarea class="form-control" id="inputDescription" style="height: 100px"></textarea>
-                        </div>
-                    </div>
-                    <div class="addButton-Container d-flex justify-content-center">
-                        <button class="btn mt-4" id="addButton" onclick="addProducts(event)">Aggiungi il prodotto</button>
-                    </div>
-                </form>
-            </div>                
             <!-- Box of products -->
-            <div class="container-fluid mt-5">
-                <div class="row" id="product-box">
+            <div class="container my-5">
+                <div class="row gy-4" id="product-box">
                     <!-- Products here -->
                 </div>
             </div>
